; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/ps3/extr_repository.c_ps3_repository_read_highmem_region_count.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/ps3/extr_repository.c_ps3_repository_read_highmem_region_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PS3_LPAR_ID_CURRENT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"highmem\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"region\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"count\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ps3_repository_read_highmem_region_count(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load i32, i32* @PS3_LPAR_ID_CURRENT, align 4
  %6 = call i32 @make_first_field(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 0)
  %7 = call i32 @make_field(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %8 = call i32 @make_field(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %9 = call i32 @read_node(i32 %5, i32 %6, i32 %7, i32 %8, i32 0, i32* %4, i32* null)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32*, i32** %2, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @read_node(i32, i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @make_first_field(i8*, i32) #1

declare dso_local i32 @make_field(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
